@@ -1,6 +1,7 @@
 package dev.khbd.lens4j.processor.path;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -54,7 +55,7 @@ public class Path {
      * @return self for chaining
      */
     public Path addParts(PathPart... parts) {
-        this.parts.addAll(List.of(parts));
+        this.parts.addAll(Arrays.asList(parts));
         return this;
     }
 
