@@ -1,13 +1,14 @@
 package dev.khbd.lens4j.processor;
 
+import static com.google.testing.compile.Compiler.javac;
+
 import com.google.testing.compile.Compilation;
 import com.google.testing.compile.JavaFileObjects;
 
 import javax.tools.JavaFileObject;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-
-import static com.google.testing.compile.Compiler.javac;
 
 /**
  * @author Sergei_Khadanovich
@@ -39,7 +40,7 @@ public class CompilationDescription {
 
     public CompilationDescription withCommons() {
         files.addAll(
-                List.of(
+                Arrays.asList(
                         JavaFileObjects.forResource("common/Bank.java"),
                         JavaFileObjects.forResource("common/Currency.java"),
                         JavaFileObjects.forResource("common/Payer.java"),
